Binary option path option added. .bin files selected if path has. If a .jpg file exists with related .bin file, it will be displayed.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
       <item>
        <widget class="QPushButton" name="checkBinButton">
         <property name="text">
-         <string>Check </string>
+         <string>Run</string>
         </property>
        </widget>
       </item>
@@ -98,7 +98,7 @@
      <x>0</x>
      <y>0</y>
      <width>1018</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
